--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -6,6 +6,8 @@ output:
     number_sections: yes
     toc: yes
     toc_float: yes
+    css: "style.css"
+    global_numbering: true    
 
 header-includes:
   - \usepackage{colortbl}
@@ -44,14 +46,15 @@ library(kableExtra)
 library(linpk)
 library(dplyr)
 library(DescTools)
-#setwd("/Users/reyashah/Documents/Teaching and writing/PKII/Parameter_Estimation")
+
+
 ```
 
 # Introduction
 
-In the self-directed learning session last week, we recapped the some of the skills gained in Year 1 around quantitative pharmacology using '<TT>R</TT>'. 
+In the self-directed learning session last week, we recapped some of the skills gained in Year 1 around quantitative pharmacology using '<TT>R</TT>'. 
 
-This workshop is split into two parts. Part 1 is designed to be completed today. Part 2 is designed to be completed in a couple of weeks time at your next quantitative session. 
+This workshop is split into two parts. Part 1 is designed to be completed today. Part 2 is designed to be completed in a couple of weeks time at your next quantitative session (or in your own time if you prefer). 
 
 In Part 1 workshop, we will build on your learning and coding to date. We will also explore the concept of central tendency and what measures of central tendency might be useful in pharmacokinetic analysis. 
 
@@ -59,7 +62,7 @@ In part 2, we will learn how to estimate bioavailability and we will recap the c
 
 ## Learning outcomes
 
--   Recap use of <TT>RStudio</TT> and <TT>ggplot2</TT> to plot pharmacokinetic data, estimate pharmacokinetic parameters
+-   Recap use of <TT>RStudio</TT> and <TT>ggplot2</TT> to plot pharmacokinetic data and estimate some pharmacokinetic parameters
 -   Save plots made using <TT>ggplot2</TT>
 -   Estimate Cmax and $AUC_{0-t}$
 -   Estimate bioavailability
@@ -83,9 +86,9 @@ This page is designed to provide you with notes of the session and be a handy re
 
 Remember, when you are using a University computer, you need to access <TT>RStudio</TT> via the University servers. The link for this is [here](https://stats4.sgul.ac.uk/rstudio). I'd suggest saving this as a "favourite" for future access.
 
-## Setting the working directory
+### Setting the working directory
 
-A reminder to set your working directory to the folder that your data is in using the <TT>setwd()</TT> function. You can check that you have set the working directory correctly by using the <TT>getwd()</TT> function and you can view available files by using the <TT>list.files()</TT> function.
+A reminder to set your working directory to the folder that your data is in using the <TT>setwd()</TT> function. The _easiest_ way to do this is to click 'session' then 'set working directory'. You can also do it with code of course.....(you can do everything with code!)
 
 ```{r, echo=TRUE, eval=FALSE}
 setwd("INSERT YOUR FILE PATH HERE")
@@ -406,7 +409,7 @@ dataset_B %>%
 
 ### Arithmetic mean
 
-With the code we have used in the course so far, we are calculating the arithmetic mean. The arithmetic mean is often colloquially referred to as "*the* mean" or "*the* average". It is frequently the only type of "mean" that people are aware of. It is a useful tool for summarising a set of data into one value, somewhere in the middle (the central tendency). It is a fairly intuitive calculation that we often don't really take much time thinking about. It incorporates all data points (unlike the median or the mode). When looking at a large sample from a normally distributed population, the sample mean ($\bar{x}$) is considered an unbiased estimator of the population mean ($\mu$).
+With the code we have used in the course so far, we are calculating the arithmetic mean. The arithmetic mean is often colloquially referred to as "*the* mean" or "*the* average". It is frequently the only type of "mean" that people are aware of. It is a useful tool for summarising a set of data into one value, somewhere in the middle (the central tendency). It is a fairly intuitive calculation that we often don't really take much time thinking about. It incorporates all data points. When looking at a large sample from a normally distributed population, the sample mean ($\bar{x}$) is considered an unbiased estimator of the population mean ($\mu$).
 
 The formula for the arithmetic mean ($\mu$) is $$\mu = \frac{\sum_{i=1}^{N} x_i}{N}$$
 
@@ -423,8 +426,8 @@ $$\bar{x} = \frac{\sum_{i=1}^{n} x_i}{n}$$
 Where:
 
 * $\bar{x}$ is the sample mean. 
-* $x_i$ are the individual data points in the sample. 
-* $n$ is the sample size (the number of data points in the sample)
+* $x_i$ are the individual observations in the sample. 
+* $n$ is the sample size (the number of observations in the sample)
 
 For example, if we have the set of numbers $\{5, 8, 11, 15, 21\}$, the arithmetic mean is calculated as:
 
@@ -432,13 +435,13 @@ $$\bar{x} = \frac{5 + 8 + 11 + 15 + 21}{5} = \frac{60}{5} = 12$$ However, the me
 
 $$\bar{x} = \frac{5 + 8 + 11 + 15 + 100}{5} = \frac{139}{5} = 27.8$$ In this scenario you might choose to use the median to estimate the central tendency of these data $$\text{median}=11$$ Let's look at an example with some pharmacokinetic data.
 
-#### Arithmetic mean is a poor estimate of central tendency in skewed data
+### Arithmetic mean is a poor estimate of central tendency in skewed data
 
 In Figure \@ref(fig:clearance-plot-calculated-no-gm), amoxicillin clearance from 10000 patients is plotted. You can see that the data is right skewed. From what we know about the pharmacological principles behind pharmacokinetic parameters, this should be intuitive - you cannot have a negative clearance and so the plot will naturally have some grouping around low clearance values and a long tail toward higher clearance values to the right.
 
 The plot shows how this right skew pulls the arithmetic mean to the right. Relying on this figure to describe pharmacokinetic data will give a falsely high impression of the population value of clearance.
 
-```{r clearance-plot-calculated-no-gm, fig.width=9, fig.height=6, warning=FALSE, message=FALSE, echo=FALSE, fig.cap="Distribution of simulated amoxicillin clearance (CL), illustrating the right-skew typical of pharmacokinetic parameters and the divergence between the arithmetic mean (AM) and median."}
+```{r clearance-plot-calculated-no-gm, warning=FALSE, message=FALSE, echo=FALSE, fig.cap="Distribution of simulated amoxicillin clearance (CL), illustrating the right-skew typical of pharmacokinetic parameters and the divergence between the arithmetic mean (AM) and median."}
 # Load necessary libraries
 library(ggplot2)
 
@@ -829,27 +832,38 @@ I appreciate that for some that will have been too much mathematics. To preempt 
 
 _Many_ pharmacokinetic parameters are _not_ normally distributed. You should _not_ use standard descriptive statistics like sample arithmetic mean and sample arithmetic standard deviation as estimates for true population values in these cases. 
 
-Instead we can use geometric mean and geometric coefficient of variation. These statistics are useful for right skewed (log-normally distributed) data. 
+Instead we can use geometric mean and geometric coefficient of variation. These statistics are useful for right skewed (log-normally distributed) data. The tables provide some calculations and the formula. Note that statistical software can often do these calculations for you. You just need to know when to apply them.
 
 ```{r shaded-table, results='asis', echo=FALSE}
 library(knitr)
 library(kableExtra)
 library(dplyr)
+library(tibble) # tibble is required for the tribble function
 
-# Create the data frame - Corrected to use standard math notation without LaTeX escaping
-# NOTE: The double backslashes for the math (\bar{x}) MUST remain inside the string
+# Create the data frame with new columns
 data <- tribble(
-  ~Measure, ~`Central Tendency`, ~`Variability Measure`, ~`Formula for Variability`, ~`Appropriate for`,
-  "Arithmetic", "Arithmetic Mean ($\\bar{x}$ or $\\text{AM}$)", "$\\%\\text{CV}$", "$\\left( \\frac{s}{\\bar{x}} \\right) \\times 100$", "$\\text{Normal}$ (Symmetrical) Data",
-  "Geometric", "Geometric Mean ($\\text{GM}$)", "$\\%\\text{GCV}$", "$\\sqrt{\\exp(s_{\\ln}^2) - 1} \\times 100$", "$\\text{Log-Normal}$ (Skewed) Data"
+  ~Measure, ~`Central Tendency`, ~`Formula for Central Tendency`, ~`Appropriate for`,
+ 
+  "Arithmetic", 
+  "Arithmetic Mean ($\\bar{x}$ or $\\text{AM}$)", 
+  # Consistent structure: (1/n) * Summation
+  "$$\\bar{x} = \\frac{1}{n} \\sum_{i=1}^{n} x_i$$", 
+  "$\\text{Normal}$ (Symmetrical) Data",
+  
+"Geometric", 
+  "Geometric Mean ($\\text{GM}$)", 
+  "$$\\text{GM} = \\exp\\left( \\frac{1}{n} \\sum_{i=1}^{n} \\ln(x_i) \\right)$$", 
+  "$\\text{Log-Normal}$ (Skewed) Data"
 )
 
 # Render the kable table with shading and alignment for HTML
 data %>%
   kbl(
-    caption = "Comparison of arithmetic and geometric summary measures",
+    caption = "Comparison of Arithmetic and Geometric Central Tendency Measures",
     booktabs = TRUE,
-    align = 'l'
+    # Align columns: Left (Measure), Left (Central Tendency), Center (Formula), Left (Appropriate for)
+    align = c('l', 'l', 'c', 'l'),
+    escape = FALSE # Ensure LaTeX math is rendered correctly
   ) %>%
   # Apply HTML styling for the header row and hover effect
   kable_styling(
@@ -860,35 +874,58 @@ data %>%
   row_spec(0, background = "#D5D5D5", bold = T)
 ```
 
-```{r both-variability-table-sd-range, results='asis', echo=FALSE}
+```{r both-variability-table, results='asis', echo=FALSE}
 library(knitr)
 library(kableExtra)
 library(dplyr)
 library(tibble)
 
-# Create the data frame - Updated Interpretation column for both SD examples
-data_both_variability_final <- tribble(
-  ~Measure, ~`Statistical Parameter`, ~`Value Type`, ~`Interpretation`,
+# Create the data frame - CORRECTING THE SQRT BRACKETS
+data_both_variability_final_full_eq <- tribble(
+  ~Measure, ~`Statistical Parameter`, ~`Formula`, ~`Interpretation`,
+  
   # --- ARITHMETIC MEASURES ---
-  "arithmetic", "standard deviation (SD)", "unit of measure", "absolute measure of spread. the $68\\%$ range is $\\text{AM} \\pm 1 \\cdot \\text{SD}$ (additive).",
-  "arithmetic", "coefficient of variation (%CV)", "percentage ($\\%$)", "relative measure of spread around the AM. used for normally distributed data.",
+  "arithmetic", 
+  "coefficient of variation (%CV)", 
+  "$$\\text{%CV} = \\left( \\frac{s}{\\bar{x}} \\right) \\times 100$$", 
+  "relative measure of spread around the AM. used for normally distributed data.", 
+  
+  "arithmetic", 
+  "standard deviation (SD)", 
+  # FIX: Placing the variance term ENTIRELY inside the \sqrt{} braces.
+  "$$\\mathbf{s} = \\sqrt{}\\left[\\tfrac{1}{n-1} \\sum_{i=1}^{n} (x_i - \\bar{x})^2\\right]$$",
+  "absolute measure of spread. the $68\\%$ range is $\\text{AM} \\pm 1 \\cdot \\text{SD}$ (additive).", 
+
   # --- GEOMETRIC MEASURES ---
-  "geometric", "geometric standard deviation (GSD)", "factor (unitless, $\\text{>}1$)", "the multiplicative factor of spread. the $68\\%$ range is $\\text{GM}/\\text{GSD}$ to $\\text{GM} \\times \\text{GSD}$ (multiplicative).",
-  "geometric", "geometric coefficient of variation (%GCV)", "percentage ($\\%$)", "relative symmetrical scatter around the geometric mean (GM). preferred for log-normal data."
+  "geometric", 
+  "geometric coefficient of variation (%GCV)", 
+  "$$\\text{%GCV} = \\sqrt{\\exp(s_{\\ln}^2) - 1} \\times 100$$", 
+  "relative symmetrical scatter around the geometric mean (GM). preferred for log-normal data.", 
+  
+  "geometric", 
+  "geometric standard deviation (GSD)", 
+  "$$\\text{GSD} = \\exp(s_{\\ln})$$",
+  "the multiplicative factor of spread. the $68\\%$ range is $\\text{GM}/\\text{GSD}$ to $\\text{GM} \\times \\text{GSD}$ (multiplicative)."
 )
 
+# Arrange the rows to group related measures together
+data_both_variability_final_full_eq <- data_both_variability_final_full_eq %>% 
+  arrange(Measure, desc(`Statistical Parameter`)) 
+
 # Render the kable table with styling for HTML
-data_both_variability_final %>%
+data_both_variability_final_full_eq %>%
   kbl(
-    caption = "comparison of arithmetic and geometric variability measures",
+    caption = "Comparison of Arithmetic and Geometric Variability Measures",
     booktabs = TRUE,
-    align = 'lccc',
-    col.names = c("domain", "statistical parameter", "value type", "interpretation"),
-    escape = FALSE # Crucial for rendering LaTeX math
+    align = 'lcccc', 
+    col.names = c("domain", "statistical parameter", "formula", "interpretation"),
+    escape = FALSE 
   ) %>%
-  # Group the rows by the 'Measure' column
+  # Group the rows
   pack_rows("arithmetic measures", 1, 2) %>%
   pack_rows("geometric measures", 3, 4) %>%
+  # Apply vertical centering for all columns
+  column_spec(1:4, extra_css = "vertical-align: middle;") %>%
   # Use HTML styling (Bootstrap)
   kable_styling(
     bootstrap_options = c("striped", "hover", "condensed"), 
@@ -898,7 +935,7 @@ data_both_variability_final %>%
   row_spec(0, background = "#D5D5D5", bold = FALSE) %>%
   # Add a footer to define acronyms
   footnote(
-    general = "AM = arithmetic mean; SD = standard deviation; %CV = percent coefficient of variation; GM = geometric mean; GSD = geometric standard deviation; %GCV = percent geometric coefficient of variation. Note: $\\pm 1 \\cdot \\text{SD}$ typically encompasses approximately $68\\%$ of data points in a normal distribution.", 
+    general = "AM = arithmetic mean; $\\mathbf{s}$ = sample standard deviation; $\\bar{x}$ = arithmetic mean; %CV = percent coefficient of variation; GM = geometric mean; GSD = geometric standard deviation; $s_{\\ln}$ = sample standard deviation of natural log-transformed data; $s_{\\ln}^2$ = sample variance of natural log-transformed data; %GCV = percent geometric coefficient of variation. Note: $\\pm 1 \\cdot \\text{SD}$ typically encompasses approximately $68\\%$ of data points in a normal distribution.", 
     footnote_as_chunk = TRUE
   )
 ```
@@ -963,9 +1000,7 @@ pk_summary %>%
 -   Estimate $T_max$ (median and range)
 
 ```{r log-pk}
-# This code calculates both GM and %GCV for Cmax.
-# %GCV uses the variance of the log-transformed data.
-# I am going to use dataset A (because Tmax is 0 for all IV)
+# This code calculates both GM and %GCV for Cmax using dataset_B.
 
 dataset_B %>%
   # 1. Log the concentrations and then find the maximum log concentration (log(Cmax))
@@ -977,8 +1012,8 @@ dataset_B %>%
     # GM: Antilog of the mean of the logs
     GM_cmax = exp(mean(log_cmax)),
     
-    # %GCV: 100 * sqrt(exp(variance of logs) - 1)
-    percent_GCV = 100 * sqrt(exp(var(log_cmax)) - 1)
+    # %GCV: 100 * sqrt(exp((SD of logs)^2) - 1)
+    percent_GCV = 100 * sqrt(exp(sd(log_cmax)^2) - 1)
   )
 
 
@@ -987,7 +1022,6 @@ tmax_data <- dataset_B %>%
   # 1. Group the data by subject (ID)
   group_by(ID) %>%
   # 2. Filter to keep only the row(s) where 'conc' equals the maximum concentration
-  #    Note: If Cmax occurs at multiple times, this will return multiple rows per ID.
   filter(conc == max(conc)) %>%
   # 3. Select the time column (time) and pull the value(s)
   summarise(tmax = time) %>%
@@ -1051,37 +1085,7 @@ dataset_B <- read.csv("https://raw.githubusercontent.com/dlonsdal/SGUL_PK_data/r
 
 ```
 
-```{r time,echo = FALSE, eval = FALSE, message=FALSE}
 
-library(dplyr)
-library(PKNCA) # Required for geomean() and geocv()
-
-## 1. Combine the oral and IV datasets and explicitly assign study groups
-full <- rbind(
-  mutate(dataset_B, study = "ORAL"),
-  mutate(dataset_A, study = "IV")
-)
-
-## 2. Estimate the individual AUC for each ID and study
-individual_AUC <- full %>% 
-  group_by(ID, study) %>%
-  # Note: AUC function is assumed to be available
-  summarise(AUC = AUC(time, conc, method = 'trapezoid'), .groups = 'drop') 
-
-individual_AUC %>%
-  # Spread the data so ORAL and IV are in separate columns for the ratio
-  pivot_wider(names_from = study, values_from = AUC) %>%
-  
-  # Calculate the individual F ratio for each subject
-  mutate(Individual_F_ratio = ORAL / IV) %>%
-  
-  # Calculate the Geometric Mean of the individual F ratios
-  summarise(
-    F_percent = 100 * geomean(Individual_F_ratio),
-    # The GCV for F is simply geocv() of the ratios:
-    GCV_percent_F = geocv(Individual_F_ratio) 
-  )
-```
 
 ```{r}
 library(dplyr)
@@ -1097,24 +1101,31 @@ full <- rbind(
 individual_AUC <- full %>% 
   group_by(ID, study) %>%
   # Use DescTools::AUC to calculate the Area Under the Curve
-  summarise(AUC = AUC(x = time, y = conc, method = "trapezoid"), .groups = 'drop') 
+  summarise(AUC = AUC(x = time, y = conc, method = "trapezoid")) 
+individual_AUC
 
-## 3. Calculate the geometric summary (gAUC, %GCV, and variance) for each study
-geometric_summary <- individual_AUC %>% 
-  group_by(study) %>% 
+# 3. Calculate individual ratios
+individual_ratios <- individual_AUC %>%
+  group_by(ID) %>%
   summarise(
-    # Geometric Mean (GM) calculation using the base R formula: exp(mean(log(AUC)))
-    gAUC = exp(mean(log(AUC))),
-    .groups = 'drop'
+    # Subsetting the AUC vector where 'drug' equals 'test' or 'reference'
+    AUC_IV = AUC[study == "IV"],
+    AUC_Oral = AUC[study == "ORAL"],
+    .groups = "drop"
+  ) %>%
+  
+  # Calculate the AUC ratio Test/Reference for each individual
+  mutate(AUC_Ratio = AUC_Oral / AUC_IV)
+individual_ratios
+# 4. Final summary: Calculate the Geometric Mean Ratio (GMR) and its variability
+final_summary <- individual_ratios %>% 
+  summarise(
+    # Geometric Mean Ratio (GMR): exp(mean(log(Ratio)))
+    GMR_AUC = exp(mean(log(AUC_Ratio)))
   )
 
-## 4. Final summary: F (Oral/IV) and its approximate variability
-geometric_summary %>% 
-  summarise(
-    # F is the primary result: Ratio of Geometric Means (ORAL / IV)
-    F_percent = 100 * (gAUC[study == "ORAL"] / gAUC[study == "IV"])
-  )
-
+# Display the final summary table
+final_summary
 
 ```
 
